[gd_scene load_steps=4 format=3 uid="uid://b5i3kst7shrd2"]

[ext_resource type="Script" path="res://interfaces/settings_interface.gd" id="1_162xa"]
[ext_resource type="PackedScene" uid="uid://bnabgu0s2d4da" path="res://interfaces/blank.tscn" id="2_pf64g"]
[ext_resource type="PackedScene" uid="uid://dta0kmj3jy7n3" path="res://interfaces/settings.tscn" id="3_0sym4"]

[node name="SettingsInterface" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_162xa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="back" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_BACK"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "TEXT_SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blank" parent="HBoxContainer" instance=ExtResource("2_pf64g")]
layout_mode = 2
size_flags_horizontal = 3

[node name="settings" parent="." instance=ExtResource("3_0sym4")]
layout_mode = 2
size_flags_stretch_ratio = 9.0

[connection signal="pressed" from="HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="on_applied" from="settings" to="." method="_on_settings_on_applied"]
[connection signal="on_canceled" from="settings" to="." method="_on_settings_on_canceled"]
[connection signal="on_confirmed" from="settings" to="." method="_on_settings_on_confirmed"]
